--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,20 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
+
+h1, h2, h3, h4 {
+    color: orangered;
+}
+
 * {
     padding: 0 ; 
     margin: 0 ;
+    font-family: 'Space Mono',
+    monospace;
 }
 
+a {
+    text-decoration: none;
+    cursor: pointer;
+    color: lightseagreen;
+}
+
+a:hover {
+    color: orange;
+}
 nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 20px;
+    padding: 20px;
+    background-color: white;
 }
 
 canvas {
     display: block;
     background-color: lightseagreen;
-    height: 480px;
-    width: 600px;
     margin: 50px auto;
 }
 
