--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap');
 h1, h2, h3, h4 {
     color: orangered;
 }
 
 * {
-    padding: 0 ; 
-    margin: 0 ;
-    font-family: 'Space Mono',
+    padding: 0; 
+    margin: 0;
+    font-family: 'Roboto Mono',
     monospace;
 }
 
@@ -28,10 +28,52 @@ nav {
     background-color: white;
 }
 
+#wrapper {
+    height: 600px; 
+    width: 900px;
+    position: relative;
+    margin: 0 auto;
+}
+
+#input-username {
+    display: none;
+    text-align: center;
+    position: absolute;
+    width: 250px;
+    margin: 200px 325px;
+}
+
+#input-username h2 {
+    font-size: 40px;
+    padding-bottom: 20px;
+}
+
+#form {
+    display: flex;
+    justify-content: space-around;
+}
+
+#form input, button {
+    font-size: 16px;
+    padding: 15px; 
+    background-color:white;
+    color: teal;
+    border: none;
+    border-radius: 30px;
+}
+
+button:hover {
+    background-color: orange;
+
+}
+
+input:focus {
+    outline:none; 
+}
+
 canvas {
     display: block;
-  
-    margin: 50px auto;
+    position: absolute; 
 
     background: linear-gradient(0deg, #00aa7e, #00aa7e, #0080c8, #003b9d, #0080c8, #00aa7e, #00aa7e, );
     background-size: 700% 700%;
