--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@ h1, h2, h3, h4 {
 * {
     padding: 0; 
     margin: 0;
-    font-family: 'Roboto Mono',
+    font-family: 'Space Mono',
     monospace;
 }
 
