--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@ h1, h2, h3, h4 {
 * {
     padding: 0; 
     margin: 0;
-    font-family: 'Space Mono',
+    font-family: 'Roboto Mono',
     monospace;
 }
 
@@ -28,32 +28,51 @@ nav {
     background-color: white;
 }
 
+
+#high-scores li{
+    list-style: none;
+}
+
+ul li {
+    margin-left: 25px;
+}
+
 #wrapper {
     height: 600px; 
     width: 900px;
     position: relative;
-    margin: 0 auto;
+    margin: 40px auto;
 }
 
 #input-username {
-    display: none;
     text-align: center;
     position: absolute;
     width: 250px;
     margin: 200px 325px;
 }
 
-#input-username h2 {
+#input-username h1 {
     font-size: 40px;
     padding-bottom: 20px;
 }
 
-#form {
+#input-username h2 {
+    font-size: 20px;
+    padding-bottom: 20px;
+
+}
+
+
+form {
     display: flex;
     justify-content: space-around;
 }
 
-#form input, button {
+.hidden {
+    display: none; 
+}
+
+form input, button {
     font-size: 16px;
     padding: 15px; 
     background-color:white;
@@ -114,14 +133,21 @@ canvas {
 .bottom-container {
     margin: 0 auto;
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    color: white;
+}
+
+.bottom-container h3 {
+    color: white; 
+    padding-bottom: 10px;
 }
 
 .bottom-container section {
-    height: 100px;
-    background-color: lightgray;
+    padding: 20px;
     width: 50%;
     margin: 50px;
     box-sizing: border-box;
+    background-color: orangered;
+    border: orangered solid 2px;
+
 }
