--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -42,15 +42,21 @@ nav {
 }
 
 
-ul li, ol li {
+ol li {
     list-style: none;
     padding: 8px;
+    width: 350px;
+}
+
+ul li {
+    list-style: none;
+    padding: 12px;
 }
 
 #overlay {
     width: 100%;
     height: 100%;
-    background-color: orangered;
+    background-color: teal;
     flex-direction: column;
     align-items: center;
     color: white;
@@ -168,28 +174,13 @@ canvas {
     }
 }
 
-.bottom-container {
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    color: white;
-}
-
 #overlay h3 {
+    margin-top: -30px;
+    margin-bottom: 10px ;
     font-size: 24px;
-    padding-bottom: 40px;
     color: white; 
 }
 
-.bottom-container section {
-    padding: 20px;
-    width: 50%;
-    margin: 50px;
-    box-sizing: border-box;
-    background-color: orangered;
-    border-radius: 22px;
-
-}
 
 footer {
         width: 100%;
