--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -201,4 +201,5 @@ footer {
         display: flex;
         align-items: center;
         justify-content: space-around;
+        font-size: 24px;
 }
